Add hero photo as full-bleed background

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
   <main class="page-wrapper">
 
     <!-- ── Hero ─────────────────────────────────────────── -->
-    <section class="hero section">
-      <div class="container">
+    <section class="hero hero--photo">
+      <img src="wojciech.jpg" alt="Wojciech Hupert" class="hero__photo" />
+      <div class="hero__overlay"></div>
+      <div class="container hero__inner">
         <div class="hero__content">
-          <div class="hero__eyebrow">Product Designer · Berlin</div>
-          <h1 class="display-xl hero__title">
+          <div class="hero__eyebrow" style="color:rgba(255,255,255,0.7);">Product Designer · Berlin</div>
+          <h1 class="display-xl hero__title" style="color:#fff;">
             <span class="line">Designing products people</span>
             <span class="line line--accent">love to use.</span>
           </h1>
-          <p class="hero__desc">
+          <p class="hero__desc" style="color:rgba(255,255,255,0.8);">
             Senior product designer with 15+ years building digital products across fintech,
             Web3, media, and SaaS. Specialised in modernising legacy design systems and creating
             scalable, user-centred interfaces for complex technical products.
@@ -57,13 +59,12 @@
                 <path d="M5 12h14M12 5l7 7-7 7" />
               </svg>
             </a>
-            <a href="about.html" class="btn btn--outline">About Me</a>
+            <a href="about.html" class="btn btn--outline" style="border-color:rgba(255,255,255,0.5);color:#fff;">About
+              Me</a>
           </div>
         </div>
       </div>
     </section>
-
-    <hr class="divider" />
 
     <!-- ── Featured Work ─────────────────────────────────── -->
     <section class="section">
