Add new cinematic hero assets, styles, and about page updates

--- a/about.html
+++ b/about.html
@@ -44,15 +44,8 @@
                     <!-- Photo -->
                     <div class="reveal">
                         <div class="about-photo">
-                            <!-- Replace with: <img src="photo.jpg" alt="Wojciech Hupert" style="width:100%;height:100%;object-fit:cover;border-radius:var(--radius-lg);" /> -->
-                            <div style="text-align:center;">
-                                <svg width="48" height="48" fill="none" stroke="#5B4FE8" stroke-width="1.5"
-                                    viewBox="0 0 24 24" style="margin-bottom:12px;opacity:0.4;">
-                                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
-                                    <circle cx="12" cy="7" r="4" />
-                                </svg>
-                                <p style="font-size:0.8rem;">Add your photo here</p>
-                            </div>
+                            <img src="wojciech.jpg" alt="Wojciech Hupert — AI Experience Architect"
+                                style="width:100%;height:100%;object-fit:cover;object-position:center 10%;border-radius:var(--radius-lg);" />
                         </div>
                     </div>
 
