feat: complete premium hero section and UI redesign

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
             AI Experience Architect · Berlin
           </div>
           <h1 class="display-xl hero__title">
-            <span class="line">Your AI is Fast.</span>
-            <span class="line line--accent">But is it Costing</span>
-            <span class="line">You Customers?</span>
+            <span class="line">AI is the new baseline.</span>
+            <span class="line text-accent">Welcome to the era</span>
+            <span class="line">of Human Curation.</span>
           </h1>
           <p class="hero__desc">
-            I audit, map, and fix the <strong class="hero__strong">"AI Experience Debt"</strong>
+            Obsessed with market differentiation. Focused on LTV. I audit, map, and fix the <strong
+              class="text-accent">AI Experience Debt</strong>
             quietly driving your users to competitors.
           </p>
           <div class="hero__actions">
@@ -68,25 +69,25 @@
             </a>
             <a href="portfolio.html" class="btn btn--ghost">See My Work</a>
           </div>
-        </div>
 
-        <!-- Floating credential strip — bottom right -->
-        <div class="hero-cinematic__creds">
-          <div class="hero-cred">
-            <span class="hero-cred__n">15+</span>
-            <span class="hero-cred__l">Years<br>Experience</span>
-          </div>
-          <div class="hero-cred__sep"></div>
-          <div class="hero-cred">
-            <span class="hero-cred__n">3×</span>
-            <span class="hero-cred__l">Industries<br>Fintech · Web3 · SaaS</span>
-          </div>
-          <div class="hero-cred__sep"></div>
-          <div class="hero-cred">
-            <span class="hero-cred__n">
-              <span class="hero-cred__dot"></span>
-            </span>
-            <span class="hero-cred__l">Available<br>for projects</span>
+          <!-- Credential strip — directly under actions -->
+          <div class="hero-cinematic__creds">
+            <div class="hero-cred">
+              <span class="hero-cred__n">15+</span>
+              <span class="hero-cred__l">Years<br>Experience</span>
+            </div>
+            <div class="hero-cred__sep"></div>
+            <div class="hero-cred">
+              <span class="hero-cred__n">3×</span>
+              <span class="hero-cred__l">Industries<br>Fintech · Web3 · SaaS</span>
+            </div>
+            <div class="hero-cred__sep"></div>
+            <div class="hero-cred">
+              <span class="hero-cred__n">
+                <span class="hero-cred__dot"></span>
+              </span>
+              <span class="hero-cred__l">Available<br>for projects</span>
+            </div>
           </div>
         </div>
       </div>
@@ -108,6 +109,10 @@
             <h2 class="display-md" style="margin-top:12px;margin-bottom:24px;">The "AI-First" Trap</h2>
             <p>You deployed AI agents to scale your operations. On paper, your efficiency skyrocketed. In reality, you
               are accumulating massive <strong>Experience Debt</strong>.</p>
+            <p style="margin-top:16px;">In a world where everyone has AI, <strong style="color:var(--color-text);">AI is
+                no longer an advantage — it's the new baseline</strong>. The only unfair advantage left is the human
+              taste
+              and curation that AI cannot replicate.</p>
             <p style="margin-top:16px;">Your agents are technically completing tasks, but they lack human context. They
               get stuck in loops, deliver robotic responses to frustrated clients, and fail silently when a process goes
               sideways.</p>
@@ -142,7 +147,7 @@
         <div class="solution-grid">
           <div class="solution-visual reveal">
             <div class="solution-icon-wrap">
-              <svg width="64" height="64" fill="none" stroke="#5B4FE8" stroke-width="1.5" viewBox="0 0 24 24">
+              <svg width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                 <path d="M12 2L2 7l10 5 10-5-10-5z" />
                 <path d="M2 17l10 5 10-5" />
                 <path d="M2 12l10 5 10-5" />
@@ -153,14 +158,16 @@
               <span class="pullquote__accent">I optimise for the user.</span>"
             </blockquote>
           </div>
-          <div class="reveal reveal-delay-1">
+          <div class="solution-content reveal reveal-delay-1">
             <p class="eyebrow">The Solution</p>
-            <h2 class="display-md" style="margin-top:12px;margin-bottom:24px;">Bridging Machine Logic and Human Trust
+            <h2 class="display-md" style="margin-top:12px;margin-bottom:24px;">Design as Your Insurance Policy
             </h2>
-            <p>Developers build the API connection. I build the user retention logic. I map the edge-cases your
-              engineering team misses — the dead-end loops, the silent failures, the moments an agent loses a customer
-              forever.</p>
-            <p style="margin-top:16px;">As an Operations Architect, I audit your agentic workflows, identify the
+            <p>Developers build the API connection. I build the user retention logic. Think of this as your
+              <strong>insurance policy against your product becoming a commodity</strong>.
+            </p>
+            <p style="margin-top:16px;">I map the edge-cases your engineering team misses — the dead-end loops, the
+              silent failures, the moments an agent loses a customer forever. As an Operations Architect, I audit your
+              agentic workflows, identify the
               friction driving your customers away, and design the guardrails that put you back in control of your
               brand's experience.</p>
             <a href="about.html" class="btn btn--outline" style="margin-top:32px;display:inline-flex;">
@@ -175,6 +182,16 @@
     </section>
 
     <hr class="divider" />
+
+    <!-- ── The Calm Choice Banner ─────────────────────────────────── -->
+    <section class="banner-speedbump">
+      <div class="container reveal">
+        <h2 class="display-md">In an era of AI-generated noise, <br><span class="text-accent">the calmest
+            product wins.</span></h2>
+        <p>Users will gravitate toward the product that offers the most clarity. Minimalism isn't an aesthetic choice —
+          it's a measurable business value.</p>
+      </div>
+    </section>
 
     <!-- ── Core Services ─────────────────────────────────── -->
     <section class="section" style="background:var(--color-surface);">
@@ -302,19 +319,19 @@
 
     <!-- ── CTA ──────────────────────────────────────────── -->
     <section class="section section--cta">
-      <div class="container" style="text-align:center;">
-        <div class="reveal">
+      <div class="container">
+        <div class="cta-box reveal">
           <p class="eyebrow"
-            style="font-size:0.8rem;font-weight:700;text-transform:uppercase;letter-spacing:0.12em;color:var(--color-accent);margin-bottom:16px;">
+            style="font-size:0.8rem;font-weight:700;text-transform:uppercase;letter-spacing:0.12em;margin-bottom:16px;">
             Ready to Stop the Bleeding?</p>
           <h2 class="display-md" style="margin-bottom:16px;color:#fff;">Find out where your AI is losing customers.</h2>
-          <p style="max-width:520px;margin:0 auto 32px;color:rgba(255,255,255,0.7);">
+          <p style="max-width:520px;margin:0 auto 32px;color:rgba(255,255,255,0.85);font-size:1.1rem;">
             In 15 minutes, I'll identify one specific workflow where your agentic AI is creating Experience Debt — no
             pitch, no commitment.
           </p>
-          <a href="contact.html" class="btn btn--primary" style="font-size:1rem;padding:16px 40px;">
+          <a href="contact.html" class="btn btn--primary cta-box__btn">
             Request a 15-Min Agent Teardown
-            <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24">
+            <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7" />
             </svg>
           </a>
