--- a/about.html
+++ b/about.html
@@ -43,9 +43,16 @@
 
                     <!-- Photo -->
                     <div class="reveal">
-                        <div class="about-photo">
-                            <img src="wojciech.jpg" alt="Wojciech Hupert — AI Experience Architect"
-                                style="width:100%;height:100%;object-fit:cover;object-position:center 10%;border-radius:var(--radius-lg);" />
+                        <div class="about-photo-wrap">
+                            <div class="about-photo__accent"></div>
+                            <figure class="about-photo">
+                                <img src="wojciech.jpg" alt="Wojciech Hupert — AI Experience Architect"
+                                    class="about-photo__img" />
+                                <div class="about-photo__badge">
+                                    <span class="status-dot"></span>
+                                    Accepting new projects
+                                </div>
+                            </figure>
                         </div>
                     </div>
 
